--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "node-dbpools",
   "version": "0.9.0",
-  "description" : "node-dbpool 目前只实现sybase连接线程池"
+  "description" : "node-dbpool 目前只实现sybase连接线程池",
   "license": "MIT",
   "author": {
-    "name": "huangbinlong & wuhao",
+    "name": "huangbinlong & wuhao"
   },
   "keywords" : [
   	"sybase", "pool" , "db"
